grub2 (1.99~20101122-2) UNRELEASED; urgency=low

  * Build-depend on qemu-img and parted on non-Hurd architectures.
  * qemu_img_exists.patch: Skip partmap test if qemu-img doesn't exist (as
    is the case on the Hurd).
  * Make grub-efi-ia32 and grub-efi-amd64 depend on efibootmgr so that
    grub-install works properly.

 -- Colin Watson <cjwatson@debian.org>  Mon, 22 Nov 2010 15:44:40 +0000

grub2 (1.99~20101122-1) experimental; urgency=low

  [ Colin Watson ]
  * New Bazaar snapshot.  Too many changes to list in full, but some of the
    more user-visible ones are as follows:
    - GRUB script:
      + Function parameters, "break", "continue", "shift", "setparams",
        "return", and "!".
      + "export" command supports multiple variable names.
      + Multi-line quoted strings support.
      + Wildcard expansion.
    - sendkey support.
    - USB hotunplugging and USB serial support.
    - Rename CD-ROM to cd on BIOS.
    - Add new --boot-directory option to grub-install, grub-reboot, and
      grub-set-default; the old --root-directory option is still accepted
      but was often confusing.
    - Basic btrfs detection/UUID support (but no file reading yet).
    - bash-completion for utilities.
    - If a device is listed in device.map, always assume that it is
      BIOS-visible rather than using extra layers such as LVM or RAID.
    - Add grub-mknetdir script (closes: #550658).
    - Remove deprecated "root" command.
    - Handle RAID devices containing virtio components.
    - GRUB Legacy configuration file support (via grub-menulst2cfg).
    - Keyboard layout support (via grub-mklayout and grub-kbdcomp).
    - Check generated grub.cfg for syntax errors before saving.
    - Pause execution for at most ten seconds if any errors are displayed,
      so that the user has a chance to see them.
    - Support submenus.
    - Write embedding zone using Reed-Solomon, so that it's robust against