@@ -255,6 +255,14 @@ get_mountpoint()
   echo "${boot_mountpoint:-/}"
 }
 
+config_item()
+{
+  if [ -f /etc/default/grub ]; then
+    . /etc/default/grub || return
+  fi
+  eval echo "\$$1"
+}
+
 case "$1" in
   configure)
     . /usr/share/debconf/confmodule
@@ -586,6 +594,14 @@ case "$1" in
           # rather than upgrade-from-grub-legacy.  Since stage2 has been
           # removed, we don't need this any more.
           rm -f /boot/grub/grub2-installed
+        fi
+      ;;
+
+      grub-efi-ia32|grub-efi-amd64)
+        bootloader_id="$(config_item GRUB_DISTRIBUTOR | tr A-Z a-z | \
+                         cut -d' ' -f1)"
+        if [ "$bootloader_id" ] && [ -d "/boot/efi/EFI/$bootloader_id" ]; then
+          grub-install
         fi
       ;;
     esac
