@@ -5,6 +5,9 @@ grub2 (1.99~20101122-2) UNRELEASED; urgency=low
     is the case on the Hurd).
   * Make grub-efi-ia32 and grub-efi-amd64 depend on efibootmgr so that
     grub-install works properly.
+  * Upgrade the installed core image when upgrading grub-efi-ia32 or
+    grub-efi-amd64, although only if /boot/efi/EFI/<id> (where <id> is an
+    identifier based on GRUB_DISTRIBUTOR, e.g. 'debian') already exists.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 22 Nov 2010 15:44:40 +0000
 
